# rust-database-internals

./: AGENTS.md  Cargo.toml  README.md  ROADMAP.md
benches/: acid_bench.rs  btree_bench.rs  indexes_bench.rs  lsm_tree_bench.rs  mvcc_bench.rs  query_optimizer_bench.rs  recovery_bench.rs  replication_bench.rs  transactions_bench.rs  wal_bench.rs
diagrams/: 01-btree.mmd  02-lsm-tree.mmd  04-transacciones.mmd  05-acid.mmd  06-mvcc.mmd  07-write-ahead-log.mmd  08-recovery.mmd  09-replicacion.mmd
docs/: 01-btree.md  02-lsm-tree.md  03-indices.md  04-transacciones.md  05-acid.md  06-mvcc.md  07-write-ahead-log.md  08-recovery.md  09-replicacion.md  10-query-optimizer.md  SUMMARY.md
docs/superpowers/plans/: 2026-07-18-rust-database-internals-course.md
docs/superpowers/specs/: 2026-07-18-btree-api-minima.md  2026-07-19-acid-properties.md  2026-07-19-indexes-primary-secondary.md  2026-07-19-lsm-tree-api-minima.md  2026-07-19-mvcc-postgresql-comparison.md  2026-07-19-mvcc-record-versions.md  2026-07-19-mvcc-snapshot-reads.md  2026-07-19-mvcc-timestamp-visibility.md  2026-07-19-query-optimizer-cost-estimation.md  2026-07-19-query-optimizer-explain.md  2026-07-19-query-optimizer-plan-representation.md  2026-07-19-query-optimizer-scans.md  2026-07-19-recovery-checkpoints.md  2026-07-19-recovery-crash-commit.md  2026-07-19-recovery-replay-wal.md  2026-07-19-replication-ack-modes.md  2026-07-19-replication-consistency-tradeoffs.md  2026-07-19-replication-lag.md  2026-07-19-replication-primary-replica.md  2026-07-19-transactions-manager.md  2026-07-19-wal-append-only-log.md  2026-07-19-wal-log-records.md  2026-07-19-wal-redo-undo.md  2026-07-19-wal-rule.md  2026-07-20-btree-empty-search.md  2026-07-20-course-benchmarked-consistency.md  2026-07-20-indexes-checklist-trace.md  2026-07-20-lsm-tree-chapter-close.md  2026-07-20-mvcc-chapter-close.md  2026-07-20-recovery-chapter-close.md  2026-07-20-replication-chapter-close.md  2026-07-20-wal-chapter-close.md
examples/: acid_advanced.rs  acid_basic.rs  acid_intermediate.rs  btree_advanced.rs  btree_basic.rs  btree_intermediate.rs  btree_real_case.rs  indexes_advanced.rs  indexes_basic.rs  indexes_intermediate.rs  lsm_tree_advanced.rs  lsm_tree_basic.rs  lsm_tree_intermediate.rs  mvcc_advanced.rs  mvcc_basic.rs  mvcc_intermediate.rs  mvcc_visibility.rs  query_optimizer_advanced.rs  query_optimizer_basic.rs  query_optimizer_intermediate.rs  recovery_crash_commit.rs  recovery_replay_wal.rs  replication_ack_modes.rs  replication_lag.rs  replication_primary_replica.rs  transactions_advanced.rs  transactions_basic.rs  transactions_intermediate.rs  wal_append_only.rs  wal_redo_undo.rs  wal_rule.rs
examples/soluciones/: acid_atomicity_failure.rs  acid_consistency_failure.rs  acid_durability_failure.rs  acid_isolation_failure.rs  btree_insert.rs  btree_search.rs  btree_split.rs  indexes_maintenance.rs  indexes_selectivity.rs  indexes_unique.rs  lsm_tree_compaction.rs  lsm_tree_flush.rs  lsm_tree_precedence.rs  mvcc_logical_delete.rs  mvcc_snapshot_read.rs  mvcc_visibility_window.rs  query_optimizer_cost_choice.rs  query_optimizer_index_scan.rs  query_optimizer_table_scan.rs  recovery_classify_crash.rs  recovery_replay_redo.rs  recovery_undo_reverse.rs  replication_ack_tradeoff.rs  replication_copy_wal.rs  replication_measure_lag.rs  transactions_commit.rs  transactions_conflict.rs  transactions_isolation.rs  wal_append_order.rs  wal_redo_after.rs  wal_rule_before_page.rs
src/: acid.rs  btree.rs  indexes.rs  lib.rs  lsm_tree.rs  mvcc.rs  query_optimizer.rs  recovery.rs  replication.rs  transactions.rs  wal.rs
tests/: acid_test.rs  btree_test.rs  indexes_test.rs  lsm_tree_test.rs  mvcc_test.rs  query_optimizer_test.rs  recovery_test.rs  replication_test.rs  transactions_test.rs  wal_test.rs
