[package]
name = "rust-database-internals"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-database-internals"
description = "Internals de bases de datos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_database_internals"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "btree_search"
path = "examples/soluciones/btree_search.rs"

[[example]]
name = "btree_insert"
path = "examples/soluciones/btree_insert.rs"

[[example]]
name = "btree_split"
path = "examples/soluciones/btree_split.rs"
