[package]
name = "rust-database-internals"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jeresoftx/rust-database-internals"
description = "Internals de bases de datos en Rust para Jeresoft Academy."
readme = "README.md"

[lib]
name = "rust_database_internals"
path = "src/lib.rs"

[dependencies]

[[example]]
name = "btree_search"
path = "examples/soluciones/btree_search.rs"

[[example]]
name = "btree_insert"
path = "examples/soluciones/btree_insert.rs"

[[example]]
name = "btree_split"
path = "examples/soluciones/btree_split.rs"

[[example]]
name = "indexes_unique"
path = "examples/soluciones/indexes_unique.rs"

[[example]]
name = "indexes_selectivity"
path = "examples/soluciones/indexes_selectivity.rs"

[[example]]
name = "indexes_maintenance"
path = "examples/soluciones/indexes_maintenance.rs"

[[example]]
name = "transactions_commit"
path = "examples/soluciones/transactions_commit.rs"

[[example]]
name = "transactions_conflict"
path = "examples/soluciones/transactions_conflict.rs"

[[example]]
name = "transactions_isolation"
path = "examples/soluciones/transactions_isolation.rs"

[[example]]
name = "acid_atomicity_failure"
path = "examples/soluciones/acid_atomicity_failure.rs"

[[example]]
name = "acid_consistency_failure"
path = "examples/soluciones/acid_consistency_failure.rs"

[[example]]
name = "acid_isolation_failure"
path = "examples/soluciones/acid_isolation_failure.rs"

[[example]]
name = "acid_durability_failure"
path = "examples/soluciones/acid_durability_failure.rs"

[[example]]
name = "query_optimizer_table_scan"
path = "examples/soluciones/query_optimizer_table_scan.rs"

[[example]]
name = "query_optimizer_index_scan"
path = "examples/soluciones/query_optimizer_index_scan.rs"

[[example]]
name = "query_optimizer_cost_choice"
path = "examples/soluciones/query_optimizer_cost_choice.rs"

[[bench]]
name = "btree_bench"
path = "benches/btree_bench.rs"
harness = false

[[bench]]
name = "indexes_bench"
path = "benches/indexes_bench.rs"
harness = false

[[bench]]
name = "transactions_bench"
path = "benches/transactions_bench.rs"
harness = false

[[bench]]
name = "acid_bench"
path = "benches/acid_bench.rs"
harness = false

[[bench]]
name = "query_optimizer_bench"
path = "benches/query_optimizer_bench.rs"
harness = false
